--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "expo": "^51.0.1",
+    "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "expo-file-system": "~17.0.1",
+    "expo-asset": "~10.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
