--- a/package.json
+++ b/package.json
@@ -7,36 +7,38 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "expo": "^51.0.1",
+    "expo-asset": "~10.0.6",
+    "expo-constants": "~16.0.1",
+    "expo-file-system": "~17.0.1",
+    "expo-haptics": "~13.0.1",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.12",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "expo-file-system": "~17.0.1",
-    "expo-asset": "~10.0.6",
-    "expo-linear-gradient": "~13.0.2",
     "react-native-gesture-handler": "~2.16.1",
-    "expo-haptics": "~13.0.1",
-    "expo-router": "~3.5.12",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.1",
     "react-native-reanimated": "~3.10.1",
-    "expo-web-browser": "~13.0.3"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "~5.3.3",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.0.0"
+    "eslint-config-expo": "^7.0.0",
+    "husky": "^9.0.11",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
