--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "dayjs": "^1.11.11",
     "expo": "^51.0.1",
     "expo-asset": "~10.0.6",
     "expo-constants": "~16.0.1",
