--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "dayjs": "^1.11.11",
-    "expo": "^51.0.1",
+    "expo": "~51.0.11",
     "expo-asset": "~10.0.6",
-    "expo-constants": "~16.0.1",
+    "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
     "expo-haptics": "~13.0.1",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.12",
+    "expo-router": "~3.5.15",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
