--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest --watch --coverage=false --changedSince=origin/dev"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
@@ -31,14 +32,20 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-test-renderer": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.5.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.0.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.2",
     "prettier": "^3.2.5",
     "typescript": "~5.3.3"
   },
@@ -47,6 +54,20 @@
     "*.{js,tsx,ts}": [
       "prettier --write --ignore-unknown",
       "eslint --cache --fix"
+    ]
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
     ]
   }
 }
