feat: add jest with coverage

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "lint": "eslint .",
     "prepare": "husky",
-    "test": "jest --watch --coverage=false --changedSince=origin/dev"
+    "test": "jest --watch --coverage=false --changedSince=origin/dev",
+    "test-coverage": "jest --watch --coverage"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
