--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.11",
     "expo": "~51.0.11",
     "expo-asset": "~10.0.6",
+    "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
     "expo-haptics": "~13.0.1",
@@ -28,6 +29,7 @@
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
+    "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
@@ -35,7 +37,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-test-renderer": "18.2.0",
-    "expo-checkbox": "~3.0.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
