--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint .",
+    "lint": "expo lint",
     "prepare": "husky",
     "test": "jest --watch --coverage=false --changedSince=origin/dev",
     "test-coverage": "jest --watch --coverage"
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "dayjs": "^1.11.11",
+    "eslint-plugin-unused-imports": "3.2.0",
     "expo": "~51.0.11",
     "expo-asset": "~10.0.6",
     "expo-checkbox": "~3.0.0",
@@ -41,17 +42,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.4.0",
     "@testing-library/react-native": "^12.5.1",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-expo": "^51.0.2",
-    "prettier": "^3.2.5",
-    "typescript": "~5.3.3"
+    "prettier": "^3.3.1",
+    "typescript": "~5.3.3",
+    "typescript-eslint": "^7.12.0"
   },
   "private": true,
   "lint-staged": {
