--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@tanstack/react-query": "^5.44.0",
     "dayjs": "^1.11.11",
     "eslint-plugin-unused-imports": "3.2.0",
     "expo": "~51.0.11",
