--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-snackbar": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "yup": "^1.4.0"
   },
