--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint",
+    "lint": "expo lint && tsc --noEmit",
     "prepare": "husky",
     "test": "jest --watch --coverage=false --changedSince=origin/dev",
     "test-coverage": "jest --coverage=false"
