feat: add locale currency formatter

--- a/app.json
+++ b/app.json
@@ -37,7 +37,8 @@
             "./assets/fonts/Livvic-Regular.ttf"
           ]
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
