--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-test-renderer": "18.2.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-localization": "~15.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
