--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "3.31.1",
     "react-test-renderer": "18.2.0",
     "yup": "^1.4.0",
-    "expo-localization": "~15.0.3"
+    "expo-localization": "~15.0.3",
+    "expo-background-fetch": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
