--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-test-renderer": "18.2.0",
     "yup": "^1.4.0",
     "expo-localization": "~15.0.3",
-    "expo-background-fetch": "~12.0.1"
+    "expo-background-fetch": "~12.0.1",
+    "expo-task-manager": "~11.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
