feat: add eas configs

--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
         "UIBackgroundModes": [
           "fetch"
         ]
-      }
+      },
+      "bundleIdentifier": "com.chefpipz.myapp"
     },
     "android": {
       "adaptiveIcon": {
@@ -39,7 +40,9 @@
         "expo-font",
         {
           "fonts": [
-            "./assets/fonts/Livvic-Regular.ttf"
+            "./assets/fonts/Open_Sans/static/OpenSans-Regular.ttf",
+            "./assets/fonts/Open_Sans/static/OpenSans-Medium.ttf",
+            "./assets/fonts/Open_Sans/static/OpenSans-SemiBold.ttf"
           ]
         }
       ],
@@ -47,6 +50,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "a08b8fa1-7b5b-4794-9c2c-d7227afaf7e3"
+      }
     }
   }
 }
