--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "yup": "^1.4.0",
     "expo-localization": "~15.0.3",
     "expo-background-fetch": "~12.0.1",
-    "expo-task-manager": "~11.8.2"
+    "expo-task-manager": "~11.8.2",
+    "expo-dev-client": "~4.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
