--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "expo-localization": "~15.0.3",
     "expo-background-fetch": "~12.0.1",
     "expo-task-manager": "~11.8.2",
-    "expo-dev-client": "~4.0.18"
+    "expo-dev-client": "~4.0.18",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
