--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "eslint-plugin-unused-imports": "3.2.0",
     "expo": "~51.0.11",
     "expo-asset": "~10.0.6",
+    "expo-background-fetch": "~12.0.1",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.18",
     "expo-file-system": "~17.0.1",
     "expo-haptics": "~13.0.1",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-router": "~3.5.15",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
+    "expo-task-manager": "~11.8.2",
     "expo-web-browser": "~13.0.3",
     "formik": "^2.4.6",
     "react": "18.2.0",
@@ -38,13 +42,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-test-renderer": "18.2.0",
-    "yup": "^1.4.0",
-    "expo-localization": "~15.0.3",
-    "expo-background-fetch": "~12.0.1",
-    "expo-task-manager": "~11.8.2",
-    "expo-dev-client": "~4.0.18",
-    "react-native-svg": "15.2.0"
+    "usehooks-ts": "^3.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
