--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
+    "expo-notifications": "~0.28.16",
     "expo-router": "~3.5.15",
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
