--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.18",
+    "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
     "expo-haptics": "~13.0.1",
     "expo-linear-gradient": "~13.0.2",
